--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "proxy": "http://localhost:8000",
+  "proxy": "http://10.10.6.162:8000",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
